fix menu icons, colors and align and add high accuracy on gps options

--- a/public/styles/components/_menu.scss
+++ b/public/styles/components/_menu.scss
@@ -1,12 +1,16 @@
-#main-menu {
+.main-menu {
   position: fixed;
-  bottom: 1.5em;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 3;
+  padding: 4rem 0 1.5rem;
+}
+
+#main-menu {
   border-radius: 100px;
   background: $c-white;
   color: $c-bg;
-  z-index: 3;
   user-select: none;
 
   ul {
@@ -18,7 +22,9 @@
   }
 
   li.active {
-    color: $c-primary;
+    a {
+      color: $c-primary;
+    }
     path {
       fill: $c-primary;
     }
@@ -40,10 +46,6 @@
       width: 1rem;
       height: 1rem;
       display: block;
-      &.menu-icon {
-        width: 1.6em;
-        height: 1.6em;
-      }
     }
   }
 }
